ajustando detalhes finais
